apps/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-media-lan-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.aboft.dev
      secretName: radarr-tls
  rules:
    - host: radarr.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
